# Recruiter-Portal-Backend-DDD

./: .gitignore  ASYNCPROCESSFLOW.md  CV_EXTRACTION_APPROACHES.md  Dockerfile  EMAIL_OTP_IMPLEMENTATION_GUIDE.md  EMAIL_OTP_IMPLEMENTATION_SUMMARY.md  EMAIL_SETUP_GUIDE.md  MANDATORY_MFA_GUIDE.md  MANDATORY_MFA_SUMMARY.md  MFA_IMPLEMENTATION_GUIDE.md  MFA_IMPLEMENTATION_SUMMARY.md  PersonaPayload.json  README.md  ROLE_IMPLEMENTATION_SUMMARY.md  SYSTEM_LEVEL_MFA_GUIDE.md  SYSTEM_LEVEL_MFA_SUMMARY.md  USER_APIS_DOCUMENTATION.md  app.db  docker-compose.yml  env.example  populate_persona_role_ids.py  pyproject.toml  requirements.txt  setup_default_roles.py  test_cv_upload.py  test_cv_upload_db_only.py  test_storage_abstraction.py
app/: main.py
app/api/: deps.py  deps_authorization.py
app/core/: ai_pricing.py  authorization.py  config.py  context.py  logger.py  security.py
app/cqrs/: handlers.py
app/data/: country_phone_codes.json
app/db/: base.py  session.py
app/domain/: __init__.py
app/events/: candidate_events.py  company_events.py  event_bus.py  handlers.py  jd_events.py  job_role_events.py  persona_events.py
app/repositories/: ai_persona_repo.py  candidate_cv_repo.py  candidate_repo.py  candidate_selection_status_repo.py  company_repo.py  job_description_repo.py  job_role_repo.py  llm_usage_repo.py  persona_level_repo.py  persona_repo.py  persona_warning_repo.py  role_repo.py  score_repo.py  user_repo.py
app/schemas/: candidate.py  jd.py  (+10 more)
data/: jd_storage.json
examples/: diagnosis.py  jd_template_usage.py
migrations/: README  env.py
scripts/: load_templates.py
(+208 files in other folders)
