[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.13.2",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "loguru==0.7.2",
    "numpy==2.1.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "python-multipart==0.0.9",
    "redis==5.0.8",
    "rq==1.16.2",
    "scikit-learn==1.5.2",
    "sentence-transformers==3.1.1",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.30.6",
]
