[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.19.0",
    "alembic==1.13.2",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "loguru==0.7.2",
    "numpy==2.1.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.9.2",
    "pydantic-settings==2.6.0",
    "pyjwt>=2.8.0",
    "python-multipart==0.0.9",
    "redis==5.0.8",
    "rq==1.16.2",
    "scikit-learn==1.5.2",
    "sentence-transformers==3.1.1",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.30.6",
    "pypdf2>=3.0.0",
    "python-docx>=0.8.11",
    "sendgrid>=6.10.0",
    "openai==1.109.1",
    "pinecone==7.3.0",
    "boto3>=1.34.0",
    "spacy>=3.7.0",
    "en-core-web-sm",
    "groq>=0.32.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
